# crypto-backtester-binance

./: README.md  mkdocs.yml  pyproject.toml
backtest/: v1_pairs_bt.py
backtest/docs/: index.md
backtest/position_managers/: v1_ls_pm.py
docs/: index.md
docs/api/: backtester.md  historical_data.md  oms_client.md  position_manager.md
src/crypto_backtester_binance/: __init__.py  backtester.py  hist_data.py  oms_simulation.py  position_manager.py
