[project]
name = "crypto-backtester-binance"
version = "0.1.0"
description = "A backtesting framework for cryptocurrency trading strategies on Binance"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Lev Rozanov", email = "l.rozanov@outlook.com"}
]
keywords = [
    "cryptocurrency",
    "backtesting",
    "trading",
    "binance",
    "strategy",
    "futures",
    "spot",
    "risk-management"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "aiohttp>=3.12.15",
    "ccxt>=4.5.4",
    "fastparquet>=2024.11.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.1",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/crypto-backtester-binance"
Documentation = "https://github.com/yourusername/crypto-backtester-binance#readme"
Repository = "https://github.com/yourusername/crypto-backtester-binance"
Issues = "https://github.com/yourusername/crypto-backtester-binance/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_backtester_binance"]